<resources>
    <string name="app_name">Event Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter Name</string>

    <string name="show_occasion">Show Occasions</string>
    <string name="select_date">Select Date:</string>
    <string name="add_occasion_button">Add Occasion</string>
    <string name="save_button">SAVE</string>
    <string name="name">Please Enter Name Of Person:</string>
    <string name="note">Add some Note:</string>
    <string name="hint_name">Name</string>
    <string name="hint_note">Note</string>
    <string name="select_occasion">Select Occasion:</string>
    <string name="dob">DOB</string>
    <string name="click_here">Click_Here</string>
    <string name="age">AGE</string>
    <string name="tag_line"> As simple as it looks!</string>
    <string name="description">Add a reminder and\nLeave everything else on us.\n\nU will be notified on the occasion\nWith an alarm!!!...</string>
    <string name="title_activity_add_ocation">AddOccasionActivity</string>
    <string name="title_activity_show_ocation">ShowOccasionActivity</string>
    <string name="name_label">Name:</string>
    <string name="event_label">Event:</string>
    <string name="date_label">Date:</string>
    <string name="note_label">Note:</string>
    <!-- Occasion  Array -->
    <string-array name="select_occasion">
        <item>Anniversary</item>
        <item>Birth Day</item>
        <item>Other</item>

    </string-array>

</resources>
