<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpal"
    android:orientation="vertical"
    tools:context="com.activities.MainActivity">
    <include layout="@layout/header_with_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/tag_line"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_25sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/description"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_add_occasion"
            android:layout_width="@dimen/margin_200dp"
            android:layout_height="wrap_content"

            android:background="@drawable/custom_btn"
            android:text="@string/add_occasion_button"
            android:textColor="@color/white"
            android:textStyle="italic|bold" />

        <Button
            android:id="@+id/btn_show_occasion"
            android:layout_width="@dimen/margin_200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/custom_btn"
            android:text="@string/show_occasion"
            android:textColor="@color/white"
            android:textStyle="italic|bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/iv_sliding_images"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_gravity="center"
        android:background="@drawable/lets_celebrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>