<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_view_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:orientation="horizontal"

        android:paddingTop="@dimen/margin_10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.3"
            android:padding="@dimen/margin_5dp"
            android:text="@string/name_label"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_15sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/tv_name1"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.7"
            android:padding="@dimen/margin_5dp"
            android:text="@string/name_label"
            android:textSize="@dimen/text_size_15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:orientation="horizontal"

        android:weightSum="1">

        <TextView
            android:id="@+id/tv_event_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.3"
            android:padding="@dimen/margin_5dp"
            android:text="@string/event_label"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_15sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/tv_event1"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.7"
            android:padding="@dimen/margin_5dp"
            android:text="@string/event_label"
            android:textSize="@dimen/text_size_15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:orientation="horizontal"

        android:weightSum="1">

        <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.3"
            android:padding="@dimen/margin_5dp"
            android:text="@string/date_label"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_15sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/tv_date1"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.7"
            android:padding="@dimen/margin_5dp"
            android:text="@string/date_label"
            android:textSize="@dimen/text_size_15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:orientation="horizontal"

        android:weightSum="1">

        <TextView
            android:id="@+id/tv_note_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.3"
            android:padding="@dimen/margin_5dp"
            android:text="@string/note_label"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_15sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/tv_note1"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_30dp"
            android:layout_weight="0.7"
            android:padding="@dimen/margin_5dp"
            android:text="@string/note_label"
            android:textSize="@dimen/text_size_15sp" />

    </LinearLayout>
</LinearLayout>
